syntax = "proto3";

package accounts.login.totp.response;

import "accounts/auth_tokens.proto";

enum Error {
    INVALID_CREDENTIALS = 0;
    INCORRECT_TOTP = 1;
    USER_NOT_FOUND = 2;
    INVALID_TOTP = 3;
    TOO_MANY_REQUESTS = 4;
    SERVER_ERROR = 5;
}

message Response {
  oneof response_field {
    Error error = 1;
    accounts.auth_tokens.AuthTokens tokens = 2;
  }
}
